argocd/manifests/outline/base/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline-redis
  namespace: outline
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: outline-redis
  template:
    metadata:
      labels:
        app: outline-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: outline-redis-pvc
