argocd/manifests/outline/base/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline-postgres
  namespace: outline
spec:
  selector:
    app: outline-postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
