argocd/manifests/outline/base/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline-redis
  namespace: outline
spec:
  selector:
    app: outline-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
